--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,22 @@
 language: python
 sudo: false
+cache: pip
+
+git:
+  submodules: true
 
 matrix:
-        include:
-                python: "2.7"
+  include:
+    - python: "2.7"
+      env: TOXENV=py27
+    - python: "3.5"
+      env: TOXENV=py35
+    - python: "2.7"
+      env: TOXENV=py27
+
+install:
+  - pip install --ignore-installed --upgrade setuptools pip tox
 
 script:
-        - pip install --ignore-installed --upgrade flake8
-        - flake8 --ignore E402,F403,F405,E501
+  - cd library
+  - tox -vv
