Who's testing the test...

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
       env: TOXENV=py27
 
 install:
-  - pip install --ignore-installed --upgrade setuptools pip tox
+  - pip install --ignore-installed --upgrade setuptools pip tox coveralls
 
 script:
   - cd library
