--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: System :: Hardware",
 ]
-dependencies = []
+dependencies = [
+    "smbus2"
+]
 
 [project.urls]
 GitHub = "https://www.github.com/pimoroni/i2cdevice-python"
@@ -111,6 +113,6 @@ ignore = [
 ]
 
 [tool.pimoroni]
-apt_packages = ["python3-rpi.gpio", "python3-smbus"]
+apt_packages = []
 configtxt = []
 commands = []
